修改vm的autostart任务参数

--- a/roles/guest-install/tasks/create_vm.yml
+++ b/roles/guest-install/tasks/create_vm.yml
@@ -10,10 +10,10 @@
 
 - name: VM | autostart vm
   virt: 
-    command: autostart
+    state: running 
     name: '{{ vm_name}}'
+    autostart: yes
     uri: 'qemu:///system'
-
 
 - name: VM | start vm
   virt: 
