--- a/roles/host-install/tasks/main.yml
+++ b/roles/host-install/tasks/main.yml
@@ -6,5 +6,5 @@
 - include: network.yml
   tags: network
 
-- include: debootstrap.yml
-  tags: debootstrap
+# - include: debootstrap.yml
+#   tags: debootstrap
